--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,11 +14,7 @@ on:
   pull_request:
     branches: [ "main" ]
     
-permissions:
-  id-token: write
-  contents: read
-  issues: write
-  pull-requests: write
+permissions: write-all
 
 
 jobs:
